grunt less task

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,9 +23,8 @@
   <!--Navigation block-->
   <header data-ng-include="'/modules/core/views/header.html'"></header>
   <!--Main content-->
-  <div class="container text-center">
+  <div class="container">
     <div ui-view></div>
-    <span class=" glyphicon glyphicon-flash"></span>
   </div>
   <!--Footer-->
   <footer data-ng-include="'/modules/core/views/footer.html'"></footer>
