--- a/public/modules/core/views/home.html
+++ b/public/modules/core/views/home.html
@@ -3,4 +3,7 @@
 </div>
 <div>
   <h2 class="text-center text-muted">Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express </h2>
+  <div class="container text-center">
+    <span class="glyphicon glyphicon-flash"></span>
+  </div>
 </div>
