mobile navigation with brand

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,7 @@ html body {
   margin-bottom: 60px;
   /*Sticky footer rules*/
 }
-html body .glyphicon-flash {
+html body .icon-cover {
   padding: 3%;
   font-size: 6em;
 }
