--- a/public/modules/core/css/core.less
+++ b/public/modules/core/css/core.less
@@ -5,7 +5,7 @@ html {
     /* Margin bottom by footer height */
 
     margin-bottom: 60px;
-    .glyphicon-flash {
+    .icon-cover {
       padding: 3%;
       font-size: 6em;
     }
