--- a/public/modules/core/views/home.html
+++ b/public/modules/core/views/home.html
@@ -1,9 +1,6 @@
-<div class="page-header">
-  <h1 class="text-center title">BAX</h1>
-</div>
-<div>
+<div class="container text-center">
+  <h1 class="t">BAX</h1>
   <h2 class="text-center text-muted">Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express </h2>
-  <div class="container text-center">
-    <span class="glyphicon glyphicon-flash"></span>
-  </div>
+  <span class="glyphicon glyphicon-flash icon-cover"></span>
+</div>
 </div>
