--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -1,8 +1,22 @@
+<!--Navigation bar-->
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
-    <ul class="nav nav-pills">
-      <li role="presentation"><a class="text-muted" href="#">Home</a></li>
-    </ul>
+      <a class="navbar-brand" href="#">
+        <span class="glyphicon glyphicon-flash"></span>
+      </a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-mobile">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
+
+    <div class="collapse navbar-collapse" id="menu-mobile">
+      <ul class="nav navbar-nav navbar-right">
+        <li role="presentation"><a class="text-uppercase" href="#">Home</a>
+      </ul>
+    </div>
+  </div>
 </nav>
