--- a/public/modules/core/css/core.less
+++ b/public/modules/core/css/core.less
@@ -3,7 +3,10 @@ html {
   min-height: 100%;
   body {
     /* Margin bottom by footer height */
-
+    
+    .title {
+      font-size: 4em;
+    }
     margin-bottom: 60px;
     .icon-cover {
       padding: 3%;
