--- a/public/modules/core/views/home.html
+++ b/public/modules/core/views/home.html
@@ -1,6 +1,7 @@
 <div class="container text-center">
-  <h1 class="t">BAX</h1>
-  <h2 class="text-center text-muted">Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express </h2>
-  <span class="glyphicon glyphicon-flash icon-cover"></span>
-</div>
+  <div class="row">
+    <h1 class="title">BAX</h1>
+    <h3 class="text-muted">Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express </h3>
+    <span class="glyphicon glyphicon-flash icon-cover"></span>
+  </div>
 </div>
