--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,15 +4,12 @@ html {
 }
 html body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
   /*Sticky footer rules*/
 }
 html body .title {
   font-size: 4em;
-}
-html body .icon-cover {
-  padding: 3%;
-  font-size: 6em;
+  text-transform: uppercase;
+  text-align: center;
 }
 html body .footer {
   padding-top: 40px;
@@ -22,4 +19,32 @@ html body .footer {
   /* Set the fixed height of the footer here */
   height: 100px;
   background-color: #f5f5f5;
+}
+
+.centered {
+  margin: auto;
+  max-width: 505px;
+  min-width: 300px;
+  background-color: #FF6600;
+}
+/*max. leveys 505 px, min. 300 px*/
+.col-xs-3 {
+  width: 35%;
+  margin: 0;
+  padding: 0 0 0 0;
+  color: white;
+  text-transform: uppercase;
+}
+.col-xs-3 .weather-info {
+  margin: 0;
+}
+.col-xs-3 h3 {
+  margin: 5px 0;
+}
+.last {
+  width: 30%;
+  margin: 0;
+  padding: 0 0 0 0;
+  background-color: #FF9147;
+  height: 100%;
 }
