--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-          <span class="glyphicon glyphicon-flash"></span>
+          <span class=""></span>
         </a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-mobile">
           <span class="sr-only">Toggle navigation</span>
@@ -16,7 +16,7 @@
 
       <div class="collapse navbar-collapse" id="menu-mobile">
         <ul class="nav navbar-nav navbar-right">
-          <li role="presentation"><a class="text-uppercase" href="#">Home</a>
+          <li role="presentation"><a class="text-uppercase" href="http://www.iltalehti.fi/etusivu/">Iltalehti</a>
           </li>
         </ul>
       </div>
