--- a/public/modules/core/views/home.html
+++ b/public/modules/core/views/home.html
@@ -1,7 +1,7 @@
-<div class="container text-center">
+<div class="container">
   <div class="row">
-    <h1 class="title">BAX</h1>
-    <h3 class="text-muted">Basic boilerplate for rapid prototyping with Bootstrap, Angular and Express </h3>
-    <span class="glyphicon glyphicon-flash icon-cover"></span>
+    <h1 class="title text-muted">Säänosto</h1>
+    <h3 class="text-muted"></h3>
   </div>
+  <div data-ng-include="'/modules/weather/views/weather.html'"></div>
 </div>
