--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="{{keywords}}">
   <meta name="description" content="{{description}}">
 
-  <link href="/styles/images/flash.png" rel="shortcut icon" type="image/x-icon">
+  <link href="" rel="shortcut icon" type="image/x-icon">
   <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link href="/css/app.css" rel="stylesheet">
   <!-- HTML5 Shim -->
