--- a/public/modules/core/css/core.less
+++ b/public/modules/core/css/core.less
@@ -6,14 +6,11 @@ html {
     
     .title {
       font-size: 4em;
-    }
-    margin-bottom: 60px;
-    .icon-cover {
-      padding: 3%;
-      font-size: 6em;
+      text-transform: uppercase;
+      text-align: center;
     }
     /*Sticky footer rules*/
-    
+
     .footer {
       padding-top: 40px;
       position: absolute;
