--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,7 @@
     <div ui-view></div>
   </div>
   <!--Footer-->
-  <footer data-ng-include="'/modules/core/views/footer.html'"></footer>
+ <!--  <footer data-ng-include="'/modules/core/views/footer.html'"></footer> -->
 
   <!--Livereload script rendered -->
   <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
