--- a/public/modules/weather/views/weather.html
+++ b/public/modules/weather/views/weather.html
@@ -1,20 +1,26 @@
-<div class="row centered">
-    <div class="col-xs-3">
-        <img class="img-responsive" src="/resources/images/cloudy.png" alt="fonecta">
-    </div>
-    <div class="col-xs-3">
-        <div class="row weather-info">
-            <p>Sää tänään</p>
+<div class="container full">
+    <div class="row centered">
+        <div class="col-xs-4 center">
+            <img class="img-responsive center" src="/resources/images/sunny.png" alt="fonecta">
         </div>
-        <div class="row weather-info">
-            <p>Helsinki<span> Kello</span></p>
+        <div class="col-xs-4 center mobile">
+            <div class="row">
+                <p class="weather-today">Sää tänään</p>
+            </div>
+            <div class="row mobile">
+                <p class="weather-today">Helsinki<span class="clock"> 15:00</span>
+                </p>
+            </div>
+            <div class="row mobile">
+                <p><span class="temperature">+27°</span>
+                </p>
+            </div>
         </div>
-        <div class="row weather-info">
-           <h1><span class="glyphicon glyphicon-plus">27</h1>
+        <div class="col-xs-4 last">
+        <div class="row">
+                <p class="weather-today">Foreca</p>
+            </div>
+            <!-- <img class="img-responsive" src="/resources/images/fonecta.png" alt="fonecta"> -->
         </div>
-    </div>
-    <div class="col-xs-3 pull-right last">
-        <h1>Foreca</h1>
-        <p>Katso tarkemmat säätiedot</p>
     </div>
 </div>
