--- a/public/modules/weather/views/weather.html
+++ b/public/modules/weather/views/weather.html
@@ -1,26 +1,20 @@
-<div class="container full">
-    <div class="row centered">
-        <div class="col-xs-4 center">
-            <img class="img-responsive center" src="/resources/images/sunny.png" alt="fonecta">
+<div class="row">
+    <div class="row-same-height">
+        <div class="col-xs-3 col-xs-height col-middle"> <img class="img-responsive center icon" src="/resources/images/sunny.png" alt="fonecta">
         </div>
-        <div class="col-xs-4 center mobile">
+        <div class="col-xs-3 col-xs-height col-middle">
             <div class="row">
-                <p class="weather-today">Sää tänään</p>
-            </div>
-            <div class="row mobile">
-                <p class="weather-today">Helsinki<span class="clock"> 15:00</span>
+                <p class="weather-today">Sää tänään
+                    <br/> Helsinki
+                    <span class="clock"> 15:00</span>
                 </p>
             </div>
-            <div class="row mobile">
+            <div class="row">
                 <p><span class="temperature">+27°</span>
                 </p>
             </div>
         </div>
-        <div class="col-xs-4 last">
-        <div class="row">
-                <p class="weather-today">Foreca</p>
-            </div>
-            <!-- <img class="img-responsive" src="/resources/images/fonecta.png" alt="fonecta"> -->
+        <div class="col-xs-3 col-xs-height col-middle last"> <img class="img-responsive center" src="/resources/images/foreca.png" alt="fonecta">
         </div>
     </div>
 </div>
