weather json data fetched

--- a/public/modules/weather/views/weather.html
+++ b/public/modules/weather/views/weather.html
@@ -1,20 +1,20 @@
-<div class="row">
-    <div class="row-same-height">
-        <div class="col-xs-3 col-xs-height col-middle"> <img class="img-responsive center icon" src="/resources/images/sunny.png" alt="fonecta">
-        </div>
-        <div class="col-xs-3 col-xs-height col-middle">
-            <div class="row">
-                <p class="weather-today">Sää tänään
-                    <br/> Helsinki
-                    <span class="clock"> 15:00</span>
-                </p>
-            </div>
-            <div class="row">
-                <p><span class="temperature">+27°</span>
-                </p>
-            </div>
-        </div>
-        <div class="col-xs-3 col-xs-height col-middle last"> <img class="img-responsive center" src="/resources/images/foreca.png" alt="fonecta">
-        </div>
+<div class="row" data-ng-controller="WeatherCtrl">
+  <div class="row-same-height">
+    <div class="col-xs-3 col-xs-height col-middle"> <img class="img-responsive center icon" src="/resources/images/sunny.png" alt="fonecta">
     </div>
+    <div class="col-xs-3 col-xs-height col-middle">
+      <div class="row">
+        <p class="weather-today">Sää tänään
+          <br/> Helsinki
+          <span class="clock"> 15:00</span>
+        </p>
+      </div>
+      <div class="row">
+        <p><span class="temperature">+27°</span>
+        </p>
+      </div>
+    </div>
+    <div class="col-xs-3 col-xs-height col-middle last"> <img class="img-responsive center" src="/resources/images/foreca.png" alt="fonecta">
+    </div>
+  </div>
 </div>
