--- a/public/modules/weather/views/weather.html
+++ b/public/modules/weather/views/weather.html
@@ -1,12 +1,12 @@
-<div class="row" data-ng-controller="WeatherCtrl">
-  <div class="row-same-height">
+<div class="row" data-ng-controller="WeatherCtrl as weatherCtrl">
+  <div class="row-same-height" data-ng-repeat="(key, value) in weatherInformation">
     <div class="col-xs-3 col-xs-height col-middle"> <img class="img-responsive center icon" src="/resources/images/sunny.png" alt="fonecta">
     </div>
     <div class="col-xs-3 col-xs-height col-middle">
       <div class="row">
         <p class="weather-today">Sää tänään
-          <br/> Helsinki
-          <span class="clock"> 15:00</span>
+          <br/> {{key}}
+          <span class="clock" data-ng-repeat=""></span>
         </p>
       </div>
       <div class="row">
