carousel-for-weather

--- a/public/modules/weather/views/weather.html
+++ b/public/modules/weather/views/weather.html
@@ -1,20 +1,29 @@
 <div class="row" data-ng-controller="WeatherCtrl as weatherCtrl">
-  <div class="row-same-height" data-ng-repeat="(key, value) in weatherInformation">
-    <div class="col-xs-3 col-xs-height col-middle"> <img class="img-responsive center icon" src="/resources/images/sunny.png" alt="fonecta">
-    </div>
-    <div class="col-xs-3 col-xs-height col-middle">
-      <div class="row">
-        <p class="weather-today">Sää tänään
-          <br/> {{key}}
-          <span class="clock" data-ng-repeat=""></span>
-        </p>
-      </div>
-      <div class="row">
-        <p><span class="temperature">+27°</span>
-        </p>
-      </div>
-    </div>
-    <div class="col-xs-3 col-xs-height col-middle last"> <img class="img-responsive center" src="/resources/images/foreca.png" alt="fonecta">
-    </div>
+  <div class="row-same-height">
+    <carousel interval="myInterval">
+      <slide data-ng-repeat="weathers in weathersAll">
+        <div data-ng-init="city = cities">
+          <div data-ng-repeat="weather in weathers" active="weather.active" data-ng-show="$first">
+            <div class="col-xs-3 col-xs-height col-middle"> <img class="img-responsive center icon" data-ng-src="/resources/images/{{weather.sky}}.png" alt="fonecta">
+            </div>
+            <div class="col-xs-3 col-xs-height col-middle">
+              <div class="row">
+                <p class="weather-today">Sää tänään
+                  <br/> {{city[0]}}
+                  <span class="clock">{{weather.time}}</span>
+                </p>
+              </div>
+              <div class="row">
+                <p><span class="temperature">{{weather.temperature}}</span>
+                </p>
+              </div>
+            </div>
+            <div class="col-xs-3 col-xs-height col-middle last"> <img class="img-responsive center" src="/resources/images/foreca.png" alt="fonecta">
+            </div>
+          </div>
+          <!--  -->
+        </div>
+      </slide>
+    </carousel>
   </div>
 </div>
