--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,6 +38,8 @@
     <!--Angular-->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/app.js"></script>
     <!--Module controllers-->
     <script src="/modules/core/controllers/HeaderCtrl.js"></script>
