--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-          <span class=""></span>
+          <img src="/resources/images/iltalehti_title.png" alt="title" />
         </a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-mobile">
           <span class="sr-only">Toggle navigation</span>
@@ -15,8 +15,8 @@
       </div>
 
       <div class="collapse navbar-collapse" id="menu-mobile">
-        <ul class="nav navbar-nav navbar-right">
-          <li role="presentation"><a class="text-uppercase" href="http://www.iltalehti.fi/etusivu/">Iltalehti</a>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Säänosto<span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
