--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,53 +2,55 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="keywords" content="{{keywords}}">
-    <meta name="description" content="{{description}}">
+  <meta name="keywords" content="{{keywords}}">
+  <meta name="description" content="{{description}}">
 
-    <link href="" rel="shortcut icon" type="image/x-icon">
-    <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/app.css" rel="stylesheet">
-    <!-- HTML5 Shim -->
-    <!--[if lt IE 9]>
+  <link href="resources/images/iltalehti.png" rel="shortcut icon" type="image/x-icon">
+  <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/app.css" rel="stylesheet">
+  <!-- HTML5 Shim -->
+  <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-    <title>{{title}}</title>
+  <title>{{title}}</title>
 </head>
 
 <body ng-app="app">
-    <!--Navigation block-->
-    <header data-ng-include="'/modules/core/views/header.html'"></header>
-    <!--Main content-->
+  <!--Navigation block-->
+  <header data-ng-include="'/modules/core/views/header.html'"></header>
+  <!--Main content-->
+  <div class="jumbotron">
     <div class="container">
-        <div ui-view></div>
+      <div ui-view></div>
     </div>
-    <!--Footer-->
-    <!--  <footer data-ng-include="'/modules/core/views/footer.html'"></footer> -->
+  </div>
+  <!--Footer-->
+  <!--  <footer data-ng-include="'/modules/core/views/footer.html'"></footer> -->
 
-    <!--Livereload script rendered -->
-    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
-    <!--jQuery-->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <!--Livereload script rendered -->
-    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
-    <!--Angular-->
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="/app.js"></script>
-    <!--Module controllers-->
-    <script src="/modules/core/controllers/HeaderCtrl.js"></script>
-    <script src="/modules/weather/services/weathers.services.js"></script>
-    <script src="/modules/weather/controllers/WeatherCtrl.js"></script>
+  <!--Livereload script rendered -->
+  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+  <!--jQuery-->
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <!--Livereload script rendered -->
+  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+  <!--Angular-->
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/app.js"></script>
+  <!--Module controllers-->
+  <script src="/modules/core/controllers/HeaderCtrl.js"></script>
+  <script src="/modules/weather/services/weathers.services.js"></script>
+  <script src="/modules/weather/controllers/WeatherCtrl.js"></script>
 
-    <!--Hamburger menu js components-->
-    <script src="/bower_components/bootstrap/js/collapse.js"></script>
-    <script src="/bower_components/bootstrap/js/transition.js"></script>
+  <!--Hamburger menu js components-->
+  <script src="/bower_components/bootstrap/js/collapse.js"></script>
+  <script src="/bower_components/bootstrap/js/transition.js"></script>
 </body>
 
 </html>
