--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,10 +6,18 @@ html body {
   /* Margin bottom by footer height */
   /*Sticky footer rules*/
 }
+html body .jumbotron {
+  background-color: #F8F7F8;
+}
 html body .title {
-  font-size: 4em;
+  font-size: 5em;
   text-transform: uppercase;
   text-align: center;
+}
+@media (max-width: 505px) {
+  html body .title {
+    font-size: 3em;
+  }
 }
 html body .footer {
   padding-top: 40px;
@@ -21,8 +29,16 @@ html body .footer {
   background-color: #f5f5f5;
 }
 
+.navbar-default {
+  background-color: #FFFFFF;
+}
+.navbar-default .navbar-brand {
+  padding: 5px 15px;
+}
+
 .row-same-height {
   display: table;
+  padding: 3% 0;
   max-width: 505px;
   min-width: 300px;
   margin: 0 auto;
@@ -77,4 +93,7 @@ html body .footer {
   .row-same-height .icon {
     padding: 5%;
   }
+}
+.row-same-height .carousel-indicators {
+  display: none;
 }
